--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "voronianski-js13k-2016",
+  "name": "js13k-boilerplate",
   "version": "1.0.0",
   "description": "---",
-  "main": "dist/bundle.js",
+  "main": "build/b.js",
   "scripts": {
     "clean": "rm -rf build/; mkdir -p build",
     "build": "NODE_ENV=production webpack --config webpack.config --progress --colors",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/voronianski-on-games/js13kGames-2016.git"
+    "url": "git+https://github.com/voronianski-on-games/js13kGames-boilerplate.git"
   },
   "author": "Dmitri Voronianski <dmitri.voronianski@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/voronianski-on-games/js13kGames-2016/issues"
+    "url": "https://github.com/voronianski-on-games/js13kGames-boilerplate/issues"
   },
-  "homepage": "https://github.com/voronianski-on-games/js13kGames-2016#readme",
+  "homepage": "https://github.com/voronianski-on-games/js13kGames-boilerplate#readme",
   "devDependencies": {
     "compression-webpack-plugin": "^0.3.1",
     "envify": "^3.4.1",
