--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js13k-boilerplate",
   "version": "1.0.0",
   "description": "---",
-  "main": "build/b.js",
+  "main": "src/main.js",
   "scripts": {
     "clean": "rm -rf build/; mkdir -p build",
     "build": "NODE_ENV=production webpack --config webpack.config --progress --colors",
