--- a/package.json
+++ b/package.json
@@ -29,10 +29,9 @@
     "eslint": "^3.3.0",
     "html-webpack-plugin": "^2.22.0",
     "husky": "^0.11.6",
+    "stats.js": "^0.16.0",
     "transform-loader": "^0.2.3",
     "webpack": "^1.13.1"
   },
-  "dependencies": {
-    "stats.js": "^0.16.0"
-  }
+  "dependencies": {}
 }
